--- a/index.html
+++ b/index.html
@@ -130,27 +130,27 @@ img {
 <div class="card" id="identityCard">
     <img src="me.jpg" alt="Angela">
     <h1>Identity Verification 💕</h1>
-    <p>Are you Angela, the most absolutely stunning girlfriend ever? 😍</p>
+    <p>Are you my beautiful, smart, cool, funny gf? 😍</p>
     <button onclick="confirmIdentity()">Yes, that's me 💖</button>
 </div>
 
 <!-- Valentine Question -->
 <div class="card hidden" id="valentineCard">
-    <h1>Sooooo… 🥺</h1>
+    <h1>Sooooo… 😗</h1>
     <p>I know this is a little late…</p>
-    <p>But time kind of stops when I’m with you anyway ⏳💞</p>
-    <p>So technically… I’m right on time.</p>
-    <h2>Will you be my Valentine? 💖</h2>
+    <p>But time kind of stops when I’m with you anyway ⏳❤️</p>
+    <p>So technically… we have all the time in the world.</p>
+    <h2>Will you be my Valentine? ❤️</h2>
     <button class="yes" onclick="sayYes()">YES 💘</button>
-    <button class="no" onclick="sayNo()">No</button>
+    <button class="no" onclick="sayNo()">No💩</button>
     <p id="retryText"></p>
 </div>
 
 <!-- Celebration -->
 <div class="card hidden" id="celebrationCard">
     <img src="Us.jpg" alt="Us Together">
-    <h1>She said YES!!! 🎉💖</h1>
-    <p>Angela, you just made me the happiest guy alive 🌹</p>
+    <h1>She said YES!!! 🎉💞</h1>
+    <p>Straight GREEEEEEEN BOI!⛹🏾‍♂️ </p>
     <p>Can't wait to spend Valentine's Day with you 💕</p>
 </div>
 
@@ -184,11 +184,11 @@ function sayNo() {
     const retryText = document.getElementById("retryText");
 
     const messages = [
-        "Are you sure, Angela? 🥺",
-        "Really sure?? 😢",
-        "What if I promise extra cuddles? 😌",
-        "I’ll let you pick dinner! 🍝",
-        "Okay but… I adore you though 😏",
+        "Are you sure, bro? 🤨",
+        "Really sure?? 😔",
+        "What if I promise extra cuddles? 😏",
+        "I’ll book Coco Jones for a live performance",
+        "Okay but… you lowkeneuinely aint got a choice doe😏",
         "This button is clearly broken. Try YES 😌"
     ];
 
@@ -215,4 +215,5 @@ function launchConfetti() {
 
 </body>
 </html>
+
 
