--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ img {
 <div class="card" id="identityCard">
     <img src="me.jpg" alt="Angela">
     <h1>Identity Verification 💕</h1>
+    <p>Click the top right button for a surprise😗</p>
     <p>Are you my beautiful, smart, cool, funny gf? 😍</p>
     <button onclick="confirmIdentity()">Yes, that's me 💖</button>
 </div>
@@ -215,5 +216,6 @@ function launchConfetti() {
 
 </body>
 </html>
+
 
 
